src/hotspot/share/jfr/recorder/checkpoint/types/jfrTypeSet.cpp
@@ -761,6 +761,7 @@ int write__method(JfrCheckpointWriter* writer, const void* m) {
 int write__method__leakp(JfrCheckpointWriter* writer, const void* m) {
   assert(m != NULL, "invariant");
   MethodPtr method = (MethodPtr)m;
+  CLEAR_LEAKP_METHOD(method);
   return write_method(writer, method, true);
 }
 
